--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0'
+    compile 'com.android.support:design:25.3.1'
 }
